QE-1200 Fix z-index for AOP drawer

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/departure-cards/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/departure-cards/style.scss
@@ -250,6 +250,10 @@
 
 	&__options-drawer {
 
+		&[open] {
+			z-index: 115;
+		}
+
 		#{$self}__tooltip-header {
 			display: none;
 		}
