--- a/wp-content/themes/quarkexpeditions/src/front-end/components/expedition-cards/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/expedition-cards/style.scss
@@ -301,6 +301,10 @@
 
 	&__options-drawer {
 
+		&[open] {
+			z-index: 115;
+		}
+
 		#{$self}__tooltip-header {
 			display: none;
 		}
