--- a/wp-content/themes/quarkexpeditions/src/front-end/components/expedition-search/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/expedition-search/style.scss
@@ -378,7 +378,7 @@
 tp-modal.expedition-search__filters-modal {
 
 	&[open] {
-		z-index: 106;
+		z-index: 115;
 	}
 
 	.modal__body > .h4 {
